# QualifyingTask

./: CMakeLists.txt  readme.md
client/: CMakeLists.txt  run_client.cpp
client/client_lib/: CMakeLists.txt  client.h
networking/: CMakeLists.txt  acceptor.cpp  acceptor.h  networking.cpp  networking.h  resolver.cpp  resolver.h  socket.cpp  socket.h
server/: CMakeLists.txt  run_server.cpp
server/argparse/: CMakeLists.txt  argparse.cpp  argparse.h
server/data/: dictionary.txt
server/server_lib/: CMakeLists.txt  client.cpp  client.h  dictionary.cpp  dictionary.h  server.cpp  server.h
